# service/gen/openapi.json
@@ -1626,6 +1626,64 @@
         }
       }
     },
+    "/api/starapp.api.v1.StarAppService/GetBearerToken": {
+      "post": {
+        "tags": [
+          "starapp.api.v1.StarAppService"
+        ],
+        "summary": "GetBearerToken",
+        "operationId": "starapp.api.v1.StarAppService.GetBearerToken",
+        "parameters": [
+          {
+            "name": "Connect-Protocol-Version",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/connect-protocol-version"
+            }
+          },
+          {
+            "name": "Connect-Timeout-Ms",
+            "in": "header",
+            "schema": {
+              "$ref": "#/components/schemas/connect-timeout-header"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/starapp.api.v1.GetBearerTokenRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "default": {
+            "description": "Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/connect.error"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/starapp.api.v1.GetBearerTokenResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/starapp.api.v1.StarAppService/GetChildHomeSummary": {
       "post": {
         "tags": [
@@ -3823,6 +3881,64 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/starapp.api.v1.LogoutResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/starapp.api.v1.StarAppService/RegenerateBearerToken": {
+      "post": {
+        "tags": [
+          "starapp.api.v1.StarAppService"
+        ],
+        "summary": "RegenerateBearerToken",
+        "operationId": "starapp.api.v1.StarAppService.RegenerateBearerToken",
+        "parameters": [
+          {
+            "name": "Connect-Protocol-Version",
+            "in": "header",
+            "required": true,
+            "schema": {
+              "$ref": "#/components/schemas/connect-protocol-version"
+            }
+          },
+          {
+            "name": "Connect-Timeout-Ms",
+            "in": "header",
+            "schema": {
+              "$ref": "#/components/schemas/connect-timeout-header"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/starapp.api.v1.RegenerateBearerTokenRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "default": {
+            "description": "Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/connect.error"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/starapp.api.v1.RegenerateBearerTokenResponse"
                 }
               }
             }
@@ -6242,6 +6358,22 @@
         "title": "FireTestWebhooksResponse",
         "additionalProperties": false
       },
+      "starapp.api.v1.GetBearerTokenRequest": {
+        "type": "object",
+        "title": "GetBearerTokenRequest",
+        "additionalProperties": false
+      },
+      "starapp.api.v1.GetBearerTokenResponse": {
+        "type": "object",
+        "properties": {
+          "token": {
+            "type": "string",
+            "title": "token"
+          }
+        },
+        "title": "GetBearerTokenResponse",
+        "additionalProperties": false
+      },
       "starapp.api.v1.GetChildHomeSummaryRequest": {
         "type": "object",
         "title": "GetChildHomeSummaryRequest",
@@ -7541,6 +7673,22 @@
           }
         },
         "title": "Redemption",
+        "additionalProperties": false
+      },
+      "starapp.api.v1.RegenerateBearerTokenRequest": {
+        "type": "object",
+        "title": "RegenerateBearerTokenRequest",
+        "additionalProperties": false
+      },
+      "starapp.api.v1.RegenerateBearerTokenResponse": {
+        "type": "object",
+        "properties": {
+          "token": {
+            "type": "string",
+            "title": "token"
+          }
+        },
+        "title": "RegenerateBearerTokenResponse",
         "additionalProperties": false
       },
       "starapp.api.v1.RejectRedemptionRequest": {
